--- a/operators/redhat-marketplace-operator/2.4.0/metadata/annotations.yaml
+++ b/operators/redhat-marketplace-operator/2.4.0/metadata/annotations.yaml
@@ -12,3 +12,4 @@ annotations:
   operators.operatorframework.io.test.mediatype.v1: scorecard+v1
   operators.operatorframework.io.test.config.v1: tests/scorecard/
   com.redhat.openshift.versions: v4.6-v4.9
+  operators.operatorframework.io.bundle.channel.default.v1: stable
